[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/indicator.png" type="Texture" id=1]
[ext_resource path="res://Components/Indicator/Indicator.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/Pickup_Coin20.wav" type="AudioStream" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.7934, 13.9828 )

[sub_resource type="Animation" id=4]
resource_name = "Appear"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.466516, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.287175, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ProgressBar:custom_styles/bg:bg_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.6, 0.6, 0.6, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ProgressBar:custom_styles/fg:bg_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.109804 ) ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.270588 ) ]
}

[node name="Indicator1" type="Area2D"]
script = ExtResource( 2 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -13.8954
margin_top = 13.9743
margin_right = 14.1046
margin_bottom = 41.9743
rect_rotation = -90.219
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 30.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.376471 )
self_modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Pulse"
playback_speed = 2.0
anims/Appear = SubResource( 4 )
anims/Pulse = SubResource( 5 )

[node name="Node" type="Node" parent="."]

[node name="Hover" type="AudioStreamPlayer" parent="Node"]

[node name="Select" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource( 3 )
[connection signal="input_event" from="." to="." method="_on_Indicator1_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Indicator1_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Indicator1_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
